# bantre

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  run_docker.py
.github/workflows/: code-quality.yaml  validate-pytests-on-pr.yaml
caddy/: Caddyfile
fastapi/bantre/: app.py
fastapi/bantre/modules/: routes.py
fastapi/bantre/modules/article/: article_model.py
fastapi/bantre/modules/auth/: auth_controller.py  auth_model.py
fastapi/bantre/system/: entity.py  group.py  section.py  user.py
fastapi/bantre/util/: auth.py  config.py
fastapi/tests/bantre/: conftest.py  test_article_model.py  test_auth.py  test_client.py  test_groups_model.py  test_sections_model.py  test_users_model.py
fastapi/tests/test_iver_stuff/: test_auth.py
webapp/: .env-elope
